new section "generator"

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
     <section class="page-header">
       <h1 class="project-name">Meiosis</h1>
       <h2 class="project-tagline">A website that demonstrates meiosis</h2>
-      <form>
-        Start Chromosomes:<br>
-        <input type="text" name="chromosomes">
-      </form>
+      <section class="generator">
+        <form>
+          Start Chromosomes:<br>
+          <input type="text" name="chromosomes">
+        </form>
+      </section>
       <a href="https://github.com/BastiMonzon/Meiosis" class="btn">Generate</a>
     </section>
   </body>
