--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
       </section>
       <button onclick="generate()" class="btn">Generate</button>
       <script>
-        val = document.getElementById('chromosomes').value;
-        function generate(val){
+        
+        function generate(){
+          val = document.getElementById('chromosomes').value;
           alert(val);
         }
       </script>
