--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <script>
         
         function generate(){
-          val = document.getElementById('chromosomes').value;
+          var val = document.getElementById('chromosomes').value;
           alert(val);
         }
       </script>
