--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <button onclick="generate()" class="btn">Generate</button>
       <script>
         function Start(){
-          document.getElementById('generator').innerHTML.appendChild("<p>Parent chromosomes grow duplicates, resulting in a diploid cell.</p><p>Next, chromosomes align at middle of the cell after crossing over (mixing genes) and split in half.</p>")
+          document.getElementById('generator').appendChild("<p>Parent chromosomes grow duplicates, resulting in a diploid cell.</p><p>Next, chromosomes align at middle of the cell after crossing over (mixing genes) and split in half.</p>")
         }
         function M1(){
           
