--- a/index.html
+++ b/index.html
@@ -18,11 +18,31 @@
           Start Chromosomes:<br>
           <input type="text" name="chromosomes" id="chromosomes">
         </form>
+        <div id="Start">
+          <p>Interphase: Parent cell contains ... number of chromosomes and is haploid</p>
+          <p>Prophase: Parent chromosomes grow duplicates, resulting in a diploid cell. chromosomes "cross over" (mix genes).</p>
+          <p>Prometaphase: Nucleus dissolves and Microtubules attatch to chromosomes.</p>
+        </div>
+        <div id="M1">
+          <p>Metaphase 1: Next, chromosomes align at middle of the cell.</p>
+          <p>Anaphase 1: Chromosomes pull apart.</p>
+          <p>Telophase 1: Microtubules dissolve.</p>
+          
+        </div>
+        <div id="M2">
+          <p>Interphase 2: Two cells form with the same number of chromosomes as the parent cell.</p>
+          <p>Metaphase 2: Microtubules attach to centromeres and chromosomes.</p>
+          <p>Anaphase 2: Chromosomes are pulled apart.</p>
+          <p>Telophase 2: cell division beghins.</p>
+        </div>
+        <div id="End">
+          <p>Cytokinesis: 4 cells are formed, each with different DNA. These are sex cells.</p>
+        </div>
       </section>
       <button onclick="generate()" class="btn">Generate</button>
       <script>
         function Start(){
-          document.getElementById('generator').innerHTML = "<p>Parent chromosomes grow duplicates, resulting in a diploid cell.</p><p>Next, chromosomes align at middle of the cell after crossing over (mixing genes) and split in half.</p>"
+          document.getElementById('generator').innerHTML = ""
         }
         function M1(){
           
