--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script type="text/javascript">
           document.getElementById("button1").addEventListener('click', function () {
               var text = document.getElementById('Interphase');
-              text.text = ("Interphase: Parent cell contains " + document.getElementById("chromosomes").value + " number of chromosomes and is haploid");
+              text.innerHTML = ("Interphase: Parent cell contains " + document.getElementById("chromosomes").value + " number of chromosomes and is haploid");
           });
         </script>
         <div id="Start">
