--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
         <script type="text/javascript">
           document.getElementById("button1").addEventListener('click', function () {
               var text = document.getElementById('Interphase');
-              text.innerHTML = ("Interphase: Parent cell contains " + document.getElementById("chromosomes").value + " number of chromosomes and is haploid");
+              text.innerHTML = ("Interphase: Parent cell contains " + document.getElementById("chromosomes").value + " chromosomes and is haploid");
           });
         </script>
         <div id="Start">
-          <p id="Interphase"></p>
+          <p id="Interphase">Interphase: Parent cell contains __ chromosomes and is haploid</p>
           <p>Prophase: Parent chromosomes grow duplicates, resulting in a diploid cell. chromosomes "cross over" (mix genes).</p>
           <p>Prometaphase: Nucleus dissolves and Microtubules attatch to chromosomes.</p>
         </div>
