--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <p id="Interphase2">Interphase 2: Two cells form with __ chromosomes</p>
           <p>Metaphase 2: Microtubules attach to centromeres and chromosomes.</p>
           <p>Anaphase 2: Chromosomes are pulled apart.</p>
-          <p>Telophase 2: cell division beghins.</p>
+          <p>Telophase 2: cell division begins.</p>
         </div>
         <div id="End">
           <p id="Cytokinesis">Cytokinesis: 4 cells are formed, each with different DNA. These are sex cells. Each cell contains __ chromosomes.</p>
